trunk/Archive2/e4/fad4ba43d20a56/main.cpp
#include <sstream>
#include <utility>
std::stringstream getss(){
   std::stringstream q;
   return std::move(q);
}
